[project]
name = "multi_agent_climate_pathways"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jamesrj_desktop", email = "james.rudd.jones@gmail.com"},
]
dependencies = [
    "absl-py>=2.1.0",
    "jax[cuda12_pip]>=0.4.23",
    #    "torch>=2.1.2",
    #    "torchvision>=0.16.2",
    #    "torchaudio>=2.1.2",
    #    "matplotlib>=3.8.2",
    #    "IPython>=8.20.0",
    "wandb>=0.16.2",
    #    "scipy>=1.12.0",
    #    "gym>=0.26.2",
    "lxm3>=0.4.1",
    "pytz>=2023.3.post1",
    "flax>=0.8.1",
    "optax",
    "distrax",
    "chex>=0.1.85",
    #    "jax>=0.4.24",
    "jaxmarl>=0.0.2",
    "flashbax>=0.1.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

 [[tool.pdm.source]]
 name = "jax_cuda"
 url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
 verify_ssl = true
 type = "find_links"

  [tool.pdm.scripts]
test.cmd = "pytest -n auto --maxprocesses 8 --dist loadfile"
# test.env = { JAX_PLATFORM_NAME = "cpu", JAX_DISABLE_MOST_OPTIMIZATIONS = "1" }
lint.shell = "ruff . && black --check ."
fmt.shell = "ruff --fix . && black ."

  [tool.pdm.dev-dependencies]
dev = [
    "lxm3>=0.4.0",
    "ruff>=0.1.11",
    "black>=23.12.1",
    "pytest>=7.4.4",
    "pytest-xdist>=3.5.0",
    "pre-commit>=3.6.0",
]

# Ruff configuration
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]
ignore = ["E731"]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
force-single-line = true
force-sort-within-sections = true
single-line-exclusions = ["typing"]

# Black configuration
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.venv
  | docs
  | third_party
  | scratch
)/
'''
